# arcade-game

./: README.md  pyproject.toml
app/: __init__.py
app/assets/images/game-over/: game-over.psd
app/assets/images/highway/: highway.psd
app/assets/images/vehicles/: entregador.psd
app/core/config/: settings.py
app/delivery/: __init__.py  deliveryman.py
app/game/: __init__.py  level.py  sprites.py
