[tool.poetry]
name = "deliveryman-arcade-game"
version = "0.1.0"
description = "Arcade game based on deliveryman's life"
authors = ["Natan Nascimento <natanascimentom@outlook.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "3.8.12"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
arcade = "^2.6.15"
pyinstaller = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
